[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "consensium-sdk"
version = "0.1.4"
description = "Consensium SDK"
authors = [
    { name="Hector Urdiales", email="hector@consensium.io" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hecur/consensium-sdk"
"Bug Tracker" = "https://github.com/hecur/consensium-sdk/issues"
   